feat: Adicionar ícones do Font Awesome e rodapé ao index.html

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
     padding: 0;
     margin: 0;
-    border: 0;
+    /* border: 2px solid #292e1e; */
     box-sizing: border-box
   }
  
@@ -16,6 +16,7 @@ body {
 }
 .box {
     display: flex;
+    
     align-items: center;
     justify-content: center;
     flex-direction: column;
@@ -26,8 +27,9 @@ body {
 
 .title {
     font-size: 35px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     color: #FFF;
+    
 }
  
 .box-input {
@@ -59,4 +61,54 @@ body {
 .btn:hover {
     transition: .5s;
     background-color: #fa8100;
+}
+
+.icon-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 20px;
+   
+}
+
+.icon-box i {
+    
+    margin: 0 0px;
+    font-size: 40px;
+    margin: 10px 10px;
+    color: #ffb12a;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    color: #FFF;
+    font-size: 20px;
+    margin-bottom: 10px;
+    
+}
+
+.footer a {
+    color: #ffb12a;
+    text-decoration: none;
+}
+
+.footer a:visited {
+    color: #352aff;
+}
+
+.footer a:hover {
+    color: #fa8100;
+}
+.footer a:link {
+    color: #ffb12a;
+}
+
+i {
+    color: #ffb12a;
+    font-size: 20px;
+    
+
 }
